--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img class="chat" src="images/icon-chat.png" />
         </header>
         <div class="img-container">
-            <img class="teddy" src="images/dog-teddy.jpg" />
+            <img class="dog-image" src="images/dog-teddy.jpg" />
                 <p class="p1">Teddy, 30</p>
                 <p class="p2">How you doin?</p>
         </div>
