--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
             <img class="logo" src="images/logo.png" />
             <img class="chat" src="images/icon-chat.png" />
         </header>
-        <div class="img-container">
-            <img class="dog-image" src="images/dog-teddy.jpg" />
-                <p class="p1">Teddy, 30</p>
-                <p class="p2">How you doin?</p>
+        <div class="img-container" id="dog-desc">
         </div>
         <footer>
-            <div class="ellipse"><img class="reject" src="images/icon-cross.png" /></div>
-            <div class="ellipse"><img class="heart" src="images/icon-heart.png" /></div>
+            <div class="ellipse1"><img class="reject"  id="reject" src="images/icon-cross.png" /></div>
+            <div class="ellipse2"><img class="accept" id="accept"  src="images/icon-heart.png" /></div>
         </footer>
     </div>
 
